# chess-coach-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
apps/chess-coach-agent/: .env.example  Dockerfile.frontend  Makefile  README.md  ai-engineering-buildcamp-capstone.yaml
backend/: alembic.ini  pyproject.toml
backend/data/eval/: critical_moments.jsonl  retrieval.jsonl  retrieval_results.json
backend/data/knowledge/: opening-principles.md
backend/data/sample_games/: kfctofu_sample.pgn
backend/migrations/: env.py
backend/migrations/versions/: e08fff1a2721_adaptive_learning_schema.py
backend/src/chess_coach_agent/: __init__.py  adaptive_api.py  agent.py  analysis.py  api.py  coach_tools.py  db_models.py  embeddings.py  engine.py  env_bootstrap.py  evaluation.py  importers.py  judge.py  judge_evaluation.py  knowledge.py  llm.py  memory.py  models.py  monitoring.py  pgn.py  practice_agent.py  repositories.py  retrieval_evaluation.py  training.py
backend/tests/: conftest.py  test_adaptive_api.py  test_adaptive_training.py  test_analysis.py  test_api.py  test_evaluation.py  test_importers.py  test_judge.py  test_memory.py  test_pgn.py  test_retrieval.py  test_tools.py
docs/: architecture.md  chess-coach-presentation.html  course_mapping.md  evaluation_results.md  manual_evaluation.md  monitoring.md  scorecard.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: publish-workspace.sh  score_project.py  smoke_practice_agent.sh
(+66 files in other folders)
