[project]
name = "chess-coach-agent"
version = "0.1.0"
description = "AI Buildcamp capstone: a chess improvement coach using game imports, Stockfish, retrieval, OpenRouter, tests, evals, and a React UI."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-chess>=1.999",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic-ai-slim[openai]>=1.32.0",
  "logfire>=4.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
